@@ -150,25 +150,37 @@ char *dialback_randstr(void)
 /**
  * convenience function to generate your dialback key (not thread-safe)
  *
- * @todo we don't use our own hostname to generate the dialback key, but xmpp-core
- * requires that we use both end's hostname to generate the key
+ * @note We generate a HMAC-SHA1 for the string "to from challenge" where
+ * the challenge is the stream id generated by the destination host. As the
+ * key for the HMAC-SHA1 we use the SHA1 hash of the secret.
  *
  * @param p the memory pool used
  * @param secret our dialback secret
  * @param to the destination of the stream
+ * @param from the source host of the stream
  * @param challenge the stream ID that should be verified
  * @return the dialback key
  */
-char *dialback_merlin(pool p, char *secret, char *to, char *challenge)
-{
-    static char res[41];
+char *dialback_merlin(pool p, char *secret, char *to, char *from, char *challenge) {
+    char *result = NULL;
+    char *message = NULL;
 
-    shahash_r(secret,                       res);
-    shahash_r(spools(p, res, to, p),        res);
-    shahash_r(spools(p, res, challenge, p), res);
+    /* sanity check */
+    if (p == NULL)
+	return NULL;
 
-    log_debug2(ZONE, LOGT_AUTH, "merlin casts his spell(%s+%s+%s) %s",secret,to,challenge,res);
-    return res;
+    /* allocate memory for the result */
+    result = pmalloco(p, 41);
+
+    /* generate the message, that has to be signed */
+    message = spools(p, to, " ", from, " ", challenge, p);
+
+    /* sign the message */
+    hmac_sha1_ascii_r(secret, message, j_strlen(message), result);
+
+    log_debug2(ZONE, LOGT_AUTH, "merlin casts his spell (%s - %s %s %s) %s", secret, to, from, challenge, result);
+
+    return result;
 }
 
 /**
